--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kiokoshedy.github.io/",
+  "homepage": "http://kiokoshedy.github.io/profile-sk",
   "name": "dev-profile",
   "version": "0.1.0",
   "private": true,
