--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.0",
-    "react-particles-js": "^3.6.0",
     "react-pdf": "^5.5.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-tsparticles": "^2.12.2",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
@@ -48,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "react-scripts": "^5.0.1"
   }
 }
